# shlibtest

buildinteg/: CMakeLists.txt
include/: addtwo.h
mainexec/: CMakeLists.txt  main.c
testmod/: CMakeLists.txt  addtwo.c
testmod/cmake/: ShlibtestAddtwo.cmake
